# ims_api

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  build.sh  docker-compose.yml  manage.py  pyproject.toml
.github/workflows/: backend-deploy.yml  main.yml
apps/: __init__.py
apps/accounts/: __init__.py  admin.py  forms.py  models.py  serializers.py  urls.py  views.py
apps/accounts/migrations/: 0001_initial.py  0002_add_capability_flags_and_rates.py
apps/assets/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
apps/assets/migrations/: 0001_initial.py  0002_alter_vehicle_vin.py  0003_add_garaging_address_to_vehicle.py
apps/assets/tests/: test_assets_api.py
apps/certificates/: admin.py  apps.py  models.py  serializers.py  services.py  urls.py  views.py
apps/certificates/migrations/: 0001_initial.py
apps/certificates/tests/: test_certificates_api.py
apps/clients/: admin.py  models.py  serializers.py  urls.py  views.py
apps/clients/migrations/: 0001_initial.py
apps/clients/tests/: test_clients_api.py
apps/common/: __init__.py  admin.py  models.py  serializers.py  services.py  urls.py  views.py
apps/common/migrations/: 0001_add_activity_log.py
apps/common/tests/: __init__.py  test_health.py
apps/endorsements/: __init__.py  admin.py  apps.py  models.py  serializers.py  urls.py  views.py
apps/endorsements/migrations/: 0001_initial.py  0002_endorsementdocument.py  __init__.py
apps/endorsements/tests/: __init__.py  test_endorsements_api.py
apps/lookups/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
apps/lookups/migrations/: 0001_initial.py  0002_seed_initial_data.py  0003_alter_addresstype_options_alter_businesstype_options_and_more.py  0004_alter_addresstype_options_alter_businesstype_options_and_more.py
apps/lookups/tests/: test_lookups_api.py
apps/policies/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
apps/policies/migrations/: 0001_initial.py  0002_alter_policy_account_manager_rate.py  0003_add_producer_rate.py  0004_add_producer_commission_amt.py
config/: __init__.py  asgi.py  urls.py  wsgi.py
config/settings/: __init__.py  base.py  development.py  local.py  production.py  test.py
docs/: api_endpoints.md  assets_api.md  auth_api.md  certificates_api.md  clients_api.md  endorsements_api.md  garaging_addresses.md  lookups_api.md  policies_api.md  timeline_api.md
docs/adr/: ADR-000-initial-stack.md
(+1 files in other folders)
